Fix missing border in post block inputs in editor
[MAILPOET-1712]

--- a/assets/css/src/newsletter_editor/common.styl
+++ b/assets/css/src/newsletter_editor/common.styl
@@ -57,8 +57,9 @@ select.mailpoet_font-size
   width: 150px
 
 .mailpoet_input_full
-  width: 100%
   box-sizing: border-box
+  margin: 0
+  width: 100%
 
 .mailpoet_range
   width: 283px
