--- a/assets/css/src/newsletter_editor/contentBlocks/posts.styl
+++ b/assets/css/src/newsletter_editor/contentBlocks/posts.styl
@@ -36,6 +36,7 @@
 
 .mailpoet_settings_posts_single_post
   border-radius: 1px
+  box-sizing: border-box
   width: 100%
   margin-top: 5px
   margin-bottom: 5px
